--- a/markup/components/footer/footer.scss
+++ b/markup/components/footer/footer.scss
@@ -29,7 +29,8 @@
 
     color: $white;
     @media screen and (max-width: 500px) {
-      font-size: 14px;
+      font-size: 13px;
+      padding-left: 20px;
     }
     &:before {
       position: absolute;
@@ -38,6 +39,8 @@
       content: '';
       @media screen and (max-width: 500px) {
         top: 5px;
+        transform: scale(0.7);
+        left: -8px;
       }
     }
     &._icq {
