--- a/markup/static/scss/common.scss
+++ b/markup/static/scss/common.scss
@@ -6,6 +6,6 @@ body {
 
   height: 100%;
   @media screen and (max-width: 1200px) {
-    overflow-x: hidden;
+    // overflow-x: hidden;
   }
 }
